# pro

./: .dockerignore  .gitignore  Dockerfile  LOCAL_RUN.md  README.md  app_server.py  index.html  pyproject.toml  requirements.txt  start-local.bat
assets/: api-config.js  dashboard.js  styles.css
examples/: log_language.json  sample_events.csv
game_data_engine/: __init__.py  behavior.py  benchmark.py  cli.py  config.py  diagnosis.py  ingest.py  journey.py  language.py  metrics.py  normalize.py  pipeline.py  sql_facts.py  sql_metrics.py  sql_normalize.py  sql_staged.py  warehouse.py
scripts/: bootstrap_local.ps1  package_local.ps1  run_server.ps1  start_server.ps1  stop_server.ps1
tests/: test_app_server.py  test_pipeline.py
