[project]
name = "game-data-engine"
version = "0.1.0"
description = "Raw game log processing and diagnosis engine prototype"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "duckdb>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["game_data_engine*"]
